@@ -4,6 +4,9 @@ Changelog
 1.5.2 - July 25, 2012
 ---------------------
 
+- livesearch_reply_json now accepts dictionaries, becoming an advanced search.
+  [Jose Dinuncio]
+
 - GetTreeJson modified to indicate in which folders the user
   has permissions to create objects.
   [Jose Dinuncio]
